fix(docs): correct path to todo index route
